[package]
name = "rust_gem"
version = "0.1.0"
edition = "2021"
authors = ["ahogappa@gmail.com"]
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
magnus = { version = "0.6.0" }

[target.'cfg(target_arch = "wasm32-wasi")'.dependencies]
wasi-vfs = { git = "https://github.com/kateinoigakukun/wasi-vfs.git" }

